remove grey commons module